@@ -1,0 +1,8 @@
+*name of appliance
+*hours used
+*minutes used
+*kwH used
+Water Heater
+20
+10
+1.4
